@@ -121,7 +121,7 @@ Smoothing = true|false; NB: no value will defaults to the object settings. This 
 
 [TextTemplate]
 String = "string to display"; NB: If this string begins with the character '$', it will be used as a locale key instead of as a plain text. It will then be automatically updated upon a new language selection;
-Font = FontTemplate; NB: If none is provided, orx's default font will be used;
+Font = FontTemplate; NB: If none is provided, orx's default font will be used; If it begins with the character '$', it will be used as a locale key instead of as a plain section name. It will then be automatically updated upon a new language selection;
 
 [FontTemplate]
 Texture = path/to/ImageFile.ext;
